--- a/src/prescribe/Views/Epidem/EpidemView.cshtml
+++ b/src/prescribe/Views/Epidem/EpidemView.cshtml
@@ -1,9 +1,13 @@
-﻿@model prescribe.ViewModels.Epidemiology.EpidemViewModel
-
+﻿
+@model prescribe.ViewModels.Epidemiology.EpidemViewModel
 @*
     For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
     ViewData["Title"] = "Epidemiology";
 }
-<h2>@ViewData["Title"].</h2>
+
+<h2>@ViewData["Title"]</h2>
+
+
+
