--- a/src/prescribe/Views/HelloWorld/Welcome.cshtml
+++ b/src/prescribe/Views/HelloWorld/Welcome.cshtml
@@ -3,6 +3,8 @@
 *@
 @{
     ViewData["Title"] = "About";
+    ViewData["Message"] = "TestWelcome";
+    ViewData["NumTimes"] = 10;
 }
 <h2>Welcome to Prescribe</h2>
 <ul>
