--- a/src/prescribe/Views/Epidem/Index.cshtml
+++ b/src/prescribe/Views/Epidem/Index.cshtml
@@ -1,46 +1,50 @@
 ﻿
+@using System.Collections.Generic
+@using System.Threading.Tasks
+@using Microsoft.AspNet.Http
+@using Microsoft.AspNet.Http.Authentication
 @model prescribe.ViewModels.Epidemiology.EpidemViewModel
-@*
-    For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
-*@
+@*@addTagHelper "*, Microsoft.AspNet.Mvc.TagHelpers"*@
+
 
 @{
-        ViewData["Title"] = "Epidemiology";
-    }
+    ViewData["Title"] = "Epidemiology";
+}
 
 <h2>@ViewData["Title"]</h2>
 
 <body>
-<div class="container">
-    <form role="form">
-        <div class="form-group">
-            <label for="gen"></label>
-            <input class="dropdown" id="gen" placeholder="Enter gender" value=@Epidemiolgy.Genders.Female>
-        </div>
-        <div class="form-group">
-            <label for="pwd"></label>
-            <input type="password" class="form-control" id="pwd" placeholder="Enter password">
-        </div>
-        <div class="checkbox">
-            <label><input type="checkbox"> Remember me</label>
-        </div>
-        <div class="button">
-            <input type="submit" class="btn btn-info" value="Submit" id="submit">
-        </div>
-    </form>
-</div>
-   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-    <script>
-        $(document).ready(function () {
-            $('form#myForm').submit();
-        $("submit").bind("click", function () {
-            
-        alert("The button was clicked.");
-    });
-});
-    </script>
+    <div class="container">
+        <form role="form">
 
+            <div class="col-sm-2">
+                <label asp-for="Gender"></label>
+            </div>
+
+            <div class="col-sm-10" title="Gender">              
+                <input class="dropdown"/>
+            </div>
+
+            <div class="col-sm-2">
+                <label asp-for="AgeGroup"></label>
+            </div>
+
+            <div class="col-sm-10">
+                <input class="dropdown"/>                      
+            </div>
+
+            <div class="checkbox">
+                <label>
+                    <input type="checkbox"> Remember me
+                </label>
+            </div>
+
+            <div class="button">
+                <input type="submit"
+                       class="btn btn-info"
+                       value="Submit" 
+                       id="submit">
+            </div>
+        </form>
+    </div>  
 </body>
-
-
-
