--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -34,6 +34,11 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    
+                    @*<li><a asp-area="" asp-controller="Home" asp-action="EHealthList">EhealthList</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="EHealthDetail">EhealthDetail</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Epidemiology">Epidemiology</a></li>*@
+
                 </ul>
             </div>
         </div>
